// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grid getExportData returns an un-carved grid 1`] = `
Object {
  "grid": Array [
    Array [
      "0,0",
      true,
      true,
      true,
      true,
    ],
    Array [
      "0,1",
      true,
      true,
      true,
      true,
    ],
    Array [
      "0,2",
      true,
      true,
      true,
      true,
    ],
    Array [
      "0,3",
      true,
      true,
      true,
      true,
    ],
    Array [
      "1,0",
      true,
      true,
      true,
      true,
    ],
    Array [
      "1,1",
      true,
      true,
      true,
      true,
    ],
    Array [
      "1,2",
      true,
      true,
      true,
      true,
    ],
    Array [
      "1,3",
      true,
      true,
      true,
      true,
    ],
    Array [
      "2,0",
      true,
      true,
      true,
      true,
    ],
    Array [
      "2,1",
      true,
      true,
      true,
      true,
    ],
    Array [
      "2,2",
      true,
      true,
      true,
      true,
    ],
    Array [
      "2,3",
      true,
      true,
      true,
      true,
    ],
    Array [
      "3,0",
      true,
      true,
      true,
      true,
    ],
    Array [
      "3,1",
      true,
      true,
      true,
      true,
    ],
    Array [
      "3,2",
      true,
      true,
      true,
      true,
    ],
    Array [
      "3,3",
      true,
      true,
      true,
      true,
    ],
  ],
}
`;

exports[`grid getExportData returns an un-carved grid 2`] = `
Object {
  "grid": Array [
    Array [
      "0,0",
      false,
      true,
      true,
      true,
    ],
    Array [
      "0,1",
      true,
      true,
      true,
      true,
    ],
    Array [
      "0,2",
      true,
      true,
      true,
      true,
    ],
    Array [
      "0,3",
      true,
      true,
      true,
      true,
    ],
    Array [
      "1,0",
      true,
      true,
      true,
      true,
    ],
    Array [
      "1,1",
      true,
      true,
      true,
      true,
    ],
    Array [
      "1,2",
      false,
      false,
      true,
      true,
    ],
    Array [
      "1,3",
      true,
      true,
      true,
      true,
    ],
    Array [
      "2,0",
      true,
      true,
      true,
      true,
    ],
    Array [
      "2,1",
      true,
      true,
      true,
      true,
    ],
    Array [
      "2,2",
      true,
      true,
      true,
      true,
    ],
    Array [
      "2,3",
      false,
      true,
      true,
      false,
    ],
    Array [
      "3,0",
      true,
      true,
      true,
      true,
    ],
    Array [
      "3,1",
      true,
      true,
      true,
      true,
    ],
    Array [
      "3,2",
      true,
      true,
      true,
      true,
    ],
    Array [
      "3,3",
      true,
      true,
      false,
      true,
    ],
  ],
}
`;
